# ai-usage

./: .gitignore  LICENSE  README.md  ai-usage.spec  pyproject.toml
.github/workflows/: release.yml
hooks/: hook-certifi-runtime.py
src/ai_usage/: __init__.py  main.py
src/ai_usage/adapters/chatgpt/: __init__.py  auth.py  usage.py
src/ai_usage/adapters/claude/: __init__.py  auth.py  usage.py
src/ai_usage/adapters/cookies/: __init__.py
src/ai_usage/adapters/copilot/: __init__.py  auth.py  usage.py
src/ai_usage/adapters/storage/: file.py
src/ai_usage/app/: __init__.py  account_manager.py  usage_service.py
src/ai_usage/domain/: __init__.py  events.py  exceptions.py  models.py
src/ai_usage/ports/: __init__.py  auth.py  storage.py  usage.py
src/ai_usage/ui/cli/: commands.py
src/ai_usage/ui/tui/: __init__.py  app.py
src/ai_usage/ui/tui/screens/: accounts.py  dashboard.py
src/ai_usage/ui/tui/widgets/: usage_card.py
